added clients section

--- a/about.html
+++ b/about.html
@@ -118,6 +118,19 @@
       </div>
       <img class="bg-pattern-3" src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
     </main>
+    <section class="clients-container">
+      <img class="pattern-four" src="./assets/bg-pattern-about-4.svg" alt="" />
+      <div class="clients-content">
+        <h2 class="heading-2">Some of our clients</h2>
+        <div class="clients">
+          <img src="./assets/logo-the-verge.png" alt="The Verge" />
+          <img src="./assets/logo-jakarta-post.png" class="jakarta-post" alt="The Jakarta Post" />
+          <img src="./assets/logo-the-guardian.png" alt="The Guardian" />
+          <img src="./assets/logo-tech-radar.png" alt="Tech Radar" />
+          <img src="./assets/logo-gadgets-now.png" class="gadgets-now" alt="Gadgets Now" />
+        </div>
+      </div>
+    </section>
     <section class="contact-us-container">
       <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
       <div class="contact-us-content">
