--- a/about.html
+++ b/about.html
@@ -55,64 +55,136 @@
         <h2 class="heading-2">Meet the directors</h2>
         <div class="cards">
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Nikita Marks</h3>
-                <p class="job-position">Founder & CEO</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-nikita.jpg" alt="Nikita" />
+                  <figcaption>
+                    <h3 class="heading-3">Nikita Marks</h3>
+                    <p class="job-position">Founder & CEO</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Nikita Marks</h3>
+                  <q class="card-quote">It always amazes me how much talent there is in every corner of the globe.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-christian.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Cristian Duncan</h3>
-                <p class="job-position">Co-founder & COO</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-christian.jpg" alt="Christian" />
+                  <figcaption>
+                    <h3 class="heading-3">Cristian Duncan</h3>
+                    <p class="job-position">Co-founder & COO</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Cristian Duncan</h3>
+                  <q class="card-quote">Distributed teams required unique processes. You need to approach work in a new way.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-cruz.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Cruz Hamer</h3>
-                <p class="job-position">Co-founder & CTO</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-cruz.jpg" alt="Cruz" />
+                  <figcaption>
+                    <h3 class="heading-3">Cruz Hamer</h3>
+                    <p class="job-position">Co-founder & COO</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Cruz Hamer</h3>
+                  <q class="card-quote">Technology is at the forefront of enabling distributed teams. That's where we come in.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-drake.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Drake Heaton</h3>
-                <p class="job-position">Business Development Lead</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-drake.jpg" alt="Drake" />
+                  <figcaption>
+                    <h3 class="heading-3">Drake Heaton</h3>
+                    <p class="job-position">Business Development Lead</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Drake Heaton</h3>
+                  <q class="card-quote">Hiring similar people from similar backgrounds is a surefire way to stunt innovation.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-griffin.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Griffin Wise</h3>
-                <p class="job-position">Lead Marketing</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-griffin.jpg" alt="Griffin" />
+                  <figcaption>
+                    <h3 class="heading-3">Griffin Wise</h3>
+                    <p class="job-position">Lead Marketing</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Griffin Wise</h3>
+                  <q class="card-quote">Unique perspectives shape unique products, which is what you need to survive these days.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
           <div class="card">
-            <figure>
-              <img width="96px" height="96px" src="./assets/avatar-aden.jpg" alt="nikita" />
-              <figcaption>
-                <h3 class="heading-3">Aden Allan</h3>
-                <p class="job-position">Head of Talent</p>
-              </figcaption>
-            </figure>
-            <button type="button" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
+            <div class="card-holder">
+              <div class="card-inner">
+                <figure class="card-front">
+                  <img width="96px" height="96px" src="./assets/avatar-aden.jpg" alt="Aden" />
+                  <figcaption>
+                    <h3 class="heading-3">Aden Allan</h3>
+                    <p class="job-position">Head of Talent</p>
+                  </figcaption>
+                </figure>
+                <div class="back-card">
+                  <h3 class="heading-3">Aden Allan</h3>
+                  <q class="card-quote">Empowered teams create truly amazing products. Set the north star and let them follow it.</q>
+                  <div class="socials">
+                    <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="Twitter" /></a
+                    ><a class="link header-link" href="http://www.linkedin.com" target="_blank"><img src="./assets/icon-linkedin.svg" alt="LinkedIn" /></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="card-btn" aria-label="open/close card"><img src="./assets/icon-cross.svg" alt="" /></button>
           </div>
         </div>
       </div>
