--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | myteam website challenge - Contact</title>
-</head>
-<body>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-  home
-  about
-
-  contact us
-
-
-
-  Contact
-
-  Ask us about
-
-  The quality of our talent network
-  Usage & implementation of our software
-  How we help drive innovation
-
-  Name
-  Email Address
-  Company Name
-  Title
-  Message
-
-  submit
-
-
-
-  home
-  about
-
-  987  Hillcrest Lane
-  Irvine, CA
-  California 92714
-  Call Us : 949-833-7432
-
-  Copyright 2020. All Rights Reserved
-  
-</body>
+    <title>Frontend Mentor | myteam website challenge - Contact</title>
+    <link rel="stylesheet" href="./styles/contact.css" />
+  </head>
+  <body>
+    <div class="menu-backdrop">
+      <div class="menu">
+        <ul>
+          <li>
+            <button type="button" aria-label="close button" class="closeBtn">
+              <img src="./assets/icon-close.svg" alt="close button" />
+            </button>
+          </li>
+          <li><a class="link header-link" href="./index.html">home</a></li>
+          <li><a class="link header-link" href="./about.html">about</a></li>
+          <li><a class="contact-us header-link" href="./contact.html">contact us</a></li>
+        </ul>
+        <img class="menu-bg-pattern" src="./assets/bg-pattern-about-1-mobile-nav-1.svg" alt="" />
+      </div>
+    </div>
+    <div class="container">
+      <header class="header-container">
+        <div class="header">
+          <div class="header-content">
+            <nav class="nav-bar">
+              <img class="logo" src="./assets/logo.svg" alt="logo" />
+              <a class="link header-link" href="./index.html">home</a>
+              <a class="link header-link" href="./about.html">about</a>
+              <a class="contact-us header-link" href="./contact.html">contact us</a>
+              <button type="button" aria-label="hamburger" class="hamburger">
+                <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&display=swap" rel="stylesheet" />
+                <img src="./assets/icon-hamburger.svg" alt="" />
+              </button>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <main class="main-content-container">
+        <div class="combined-blocks">
+          <div class="content-area">
+            <h1 class="main-heading">Contact</h1>
+            <p class="desc">Ask us about</p>
+            <div class="questions">
+              <figure class="question-block">
+                <img src="./assets/icon-person.svg" alt="icon-person" />
+                <figcaption class="question-text">The quality of our talent network</figcaption>
+              </figure>
+              <figure class="question-block">
+                <img src="./assets/icon-cog.svg" alt="icon-cog" />
+                <figcaption class="question-text">Usage & implementation of our software</figcaption>
+              </figure>
+              <figure class="question-block">
+                <img src="./assets/icon-chart.svg" alt="icon-chart" />
+                <figcaption class="question-text">How we help drive innovation</figcaption>
+              </figure>
+            </div>
+          </div>
+          <form class="form">
+            <div class="input-group">
+              <label for="name" class="visually-hidden">Name</label><br />
+              <input type="text" id="name" name="name" placeholder="Name" class="input" /><br />
+              <p class="input-error">This field is required</p>
+            </div>
+            <div class="input-group">
+              <label for="email" class="visually-hidden">Email Address</label><br />
+              <input type="email" id="email" name="email" placeholder="Email Address" class="input" /><br />
+              <p class="input-error">This field is required</p>
+            </div>
+            <div class="input-group">
+              <label for="company" class="visually-hidden">Company Name</label><br />
+              <input type="text" id="company" name="company" placeholder="Company Name" class="input" /><br />
+              <p class="input-error">This field is required</p>
+            </div>
+            <div class="input-group">
+              <label for="title" class="visually-hidden">Title</label><br />
+              <input type="text" id="title" name="title" placeholder="Title" class="input" /><br />
+              <p class="input-error">This field is required</p>
+            </div>
+            <div class="input-group">
+              <label class="visually-hidden" for="message">Message</label>
+              <textarea id="message" name="message" rows="4" cols="50" class="input message" placeholder="Message"></textarea>
+            </div>
+            <input type="submit" class="submit-btn" value="submit" />
+          </form>
+        </div>
+      </main>
+      <footer class="footer-container">
+        <div class="footer-content">
+          <div class="nav-group">
+            <img class="logo" src="./assets/logo.svg" alt="logo" />
+            <nav class="nav-links">
+              <ul>
+                <li><a class="link header-link" href="./index.html">home</a></li>
+                <li><a class="link header-link" href="./about.html">about</a></li>
+              </ul>
+            </nav>
+            <nav class="nav-socials">
+              <ul>
+                <li>
+                  <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+                </li>
+                <li>
+                  <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+                </li>
+                <li>
+                  <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+          <div class="contact-block">
+            <nav class="nav-socials">
+              <ul>
+                <li>
+                  <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
+                </li>
+                <li>
+                  <a class="link header-link" href="http://www.pinterest.com" target="_blank"><img src="./assets/icon-pinterest.svg" alt="pinterest" /></a>
+                </li>
+                <li>
+                  <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
+                </li>
+              </ul>
+            </nav>
+            <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
+            <p class="copyright">Copyright 2023. All Rights Reserved</p>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script src="./src/index.js"></script>
+  </body>
 </html>
