--- a/contact.html
+++ b/contact.html
@@ -62,26 +62,26 @@
               </figure>
             </div>
           </div>
-          <form class="form">
+          <form novalidate class="form">
             <div class="input-group">
               <label for="name" class="visually-hidden">Name</label><br />
-              <input type="text" id="name" name="name" placeholder="Name" class="input" /><br />
-              <p class="input-error">This field is required</p>
+              <input type="text" id="name" name="name" placeholder="Name" class="input" required />
+              <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label for="email" class="visually-hidden">Email Address</label><br />
-              <input type="email" id="email" name="email" placeholder="Email Address" class="input" /><br />
-              <p class="input-error">This field is required</p>
+              <input type="email" id="email" name="email" placeholder="Email Address" class="input" required />
+              <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label for="company" class="visually-hidden">Company Name</label><br />
-              <input type="text" id="company" name="company" placeholder="Company Name" class="input" /><br />
-              <p class="input-error">This field is required</p>
+              <input type="text" id="company" name="company" placeholder="Company Name" class="input" required />
+              <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label for="title" class="visually-hidden">Title</label><br />
-              <input type="text" id="title" name="title" placeholder="Title" class="input" /><br />
-              <p class="input-error">This field is required</p>
+              <input type="text" id="title" name="title" placeholder="Title" class="input" required />
+              <p class="input-error-txt"></p>
             </div>
             <div class="input-group">
               <label class="visually-hidden" for="message">Message</label>
@@ -137,5 +137,6 @@
       </footer>
     </div>
     <script src="./src/index.js"></script>
+    <script src="./src/contact.js"></script>
   </body>
 </html>
