finished project and added Readme

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="myTeam website to find the best talent" />
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
@@ -43,6 +44,7 @@
         </div>
       </header>
       <main class="main-content-container">
+        <img class="bg-pattern-2" src="./assets/bg-pattern-about-2-contact-1.svg" alt="" />
         <div class="combined-blocks">
           <div class="content-area">
             <h1 class="main-heading">Contact</h1>
@@ -90,6 +92,7 @@
             <input type="submit" class="submit-btn" value="submit" />
           </form>
         </div>
+        <img src="./assets/bg-pattern-contact-2.svg" alt="" class="contact-pattern-2" />
       </main>
       <footer class="footer-container">
         <div class="footer-content">
