--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="myTeam website to find the best talent" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png?" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
 
     <title>Frontend Mentor | myteam website challenge - Contact</title>
     <link rel="stylesheet" href="./styles/contact.css" />
