--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="myTeam website to find the best talent" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png?" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
 
     <title>Frontend Mentor | myteam website challenge - Homepage</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
