--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
         </div>
       </footer>
     </div>
-    <script src="./src/index.js"></script>
-    <script src="./src/contact.js"></script>
+    <script src="src/index.js"></script>
+    <script src="src/contact.js"></script>
   </body>
 </html>
