--- a/about.html
+++ b/about.html
@@ -255,6 +255,6 @@
         </div>
       </div>
     </footer>
-    <script src="./src/index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
