--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
         </div>
       </div>
     </footer>
-    <script src="./src/index.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
