--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <h3 class="heading-3">Kady Baker</h3>
               <p class="job-position">Product Manager at Bookmark</p>
             </figcaption>
-            <img src="./assets/avatar-kady.jpg" width="62px" height="62px" alt="kady" />
+            <img src="./assets/avatar-kady.jpg" width="62" height="62" alt="kady" />
           </figure>
           <figure class="figure2">
             <figcaption>
@@ -101,7 +101,7 @@
               <h3 class="heading-3">Aiysha Reese</h3>
               <p class="job-position">Founder of Manage</p>
             </figcaption>
-            <img src="./assets/avatar-aiysha.jpg" width="62px" height="62px" alt="aiysha" />
+            <img src="./assets/avatar-aiysha.jpg" width="62" height="62" alt="aiysha" />
           </figure>
           <figure class="figure3">
             <figcaption>
@@ -110,7 +110,7 @@
               <h3 class="heading-3">Arthur Clarke</h3>
               <p class="job-position">Co-founder of MyPhysio</p>
             </figcaption>
-            <img src="./assets/avatar-arthur.jpg" width="62px" height="62px" alt="arthur" />
+            <img src="./assets/avatar-arthur.jpg" width="62" height="62" alt="arthur" />
           </figure>
         </div>
       </div>
