--- a/about.html
+++ b/about.html
@@ -215,13 +215,13 @@
       <div class="footer-content">
         <div class="nav-group">
           <img class="logo" src="./assets/logo.svg" alt="logo" />
-          <nav class="nav-links">
+          <div role="navigation" class="nav-links">
             <ul>
               <li><a class="link header-link" href="./index.html">home</a></li>
               <li><a class="link header-link" href="./about.html">about</a></li>
             </ul>
-          </nav>
-          <nav class="nav-socials">
+          </div>
+          <div role="navigation" class="nav-socials">
             <ul>
               <li>
                 <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
@@ -233,11 +233,11 @@
                 <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
               </li>
             </ul>
-          </nav>
+          </div>
         </div>
         <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
         <div class="contact-block">
-          <nav class="nav-socials">
+          <div role="navigation" class="nav-socials">
             <ul>
               <li>
                 <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
@@ -249,7 +249,7 @@
                 <a class="link header-link" href="http://www.twitter.com" target="_blank"><img src="./assets/icon-twitter.svg" alt="twitter" /></a>
               </li>
             </ul>
-          </nav>
+          </div>
           <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
           <p class="copyright">Copyright 2023. All Rights Reserved</p>
         </div>
