--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
       <div class="footer-content">
         <div class="nav-group">
           <img class="logo" src="./assets/logo.svg" alt="logo" />
-          <div role="navigation" class="nav-links">
+          <div class="nav-links">
             <ul>
               <li><a class="link header-link" href="./index.html">home</a></li>
               <li><a class="link header-link" href="./about.html">about</a></li>
             </ul>
           </div>
-          <div role="navigation" class="nav-socials">
+          <div class="nav-socials">
             <ul>
               <li>
                 <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
@@ -149,7 +149,7 @@
         </div>
         <address class="address">987 Hillcrest Lane<br />Irvine, CA<br />California 92714<br />Call Us : 949-833-7432</address>
         <div class="contact-block">
-          <div role="navigation" class="nav-socials">
+          <div class="nav-socials">
             <ul>
               <li>
                 <a class="link header-link" href="http://www.facebook.com" target="_blank"><img src="./assets/icon-facebook.svg" alt="facebook" /></a>
