--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </section>
       <img class="pattern-home-3" src="./assets/bg-pattern-home-3.svg" alt="" />
     </main>
-    <section class="quotes-container">
+    <div class="quotes-container">
       <img src="./assets/bg-pattern-home-4-about-3.svg" alt="" />
       <div class="quotes">
         <div class="quotes-group">
@@ -115,14 +115,14 @@
         </div>
       </div>
       <img src="./assets/bg-pattern-home-5.svg" class="pattern-home-5" alt="" />
-    </section>
-    <section class="contact-us-container">
+    </div>
+    <div class="contact-us-container">
       <img class="pattern-contact-us" src="./assets/bg-pattern-home-6-about-5.svg" alt="" />
       <div class="contact-us-content">
         <h2 class="heading-2">Ready to get started?</h2>
         <a class="contact-us header-link" href="./contact.html">contact us</a>
       </div>
-    </section>
+    </div>
     <footer class="footer-container">
       <div class="footer-content">
         <div class="nav-group">
